Sat Feb  9 21:11:21 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: move header files check to the beginning of
	  "header and library section".
	  test rlim_t with sys/types.h and sys/time.h for MirOS BSD.
	  sys/types.h and sys/time.h is guarded by #ifdef and the above
	  move is required for this change.

Sat Feb  9 17:45:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, version.c: prevent duplicated load paths by empty
	  version string, it does not work right now.

Sat Feb  9 17:38:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fix arch parameters in help message.  [Bug #7804]

Sat Feb  9 13:13:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* vm_trace.c: Note about TracePoint events set, and comment on
	  Kernel#set_trace_func to prefer new TracePoint API

Sat Feb  9 10:07:47 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* BSDL: update copyright notice for 2013.

Sat Feb  9 09:24:38 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package/old.rb:  Fix behavior only on ruby 1.8.

	* lib/rubygems/package.rb:  Include checksums.yaml.gz signatures for
	  verification.
	* test/rubygems/test_gem_package.rb:  Test for the above.

Sat Feb  9 01:23:24 2013  Tanaka Akira  <akr@fsij.org>

	* test/fiddle/helper.rb: specify libc and libm locations for MirOS BSD.

	* test/dl/test_base.rb: ditto.

Fri Feb  8 23:25:33 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: change CFLAGS temporally to test
	  ARCH_FLAG="-march=i486".

Fri Feb  8 21:19:41 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: don't define ARCH_FLAG="-march=i486" if it causes
	  compilation problem.

Fri Feb  8 19:56:54 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* array.c (rb_ary_dup): reverted r39004.  see [Bug #7768], and
	  release manager finally decided to revert it.

Fri Feb  8 16:09:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_ensure): preserve errinfo across ensure proc before